add busy indicator to some list view activity